# v2ray-primary-app

./: .gitattributes  .gitignore  DEBUG_GUIDE.md  README.md  README_React.md  V2RayServerManager.jsx  build.gradle.kts  gradle.properties  metadata.json  settings.gradle.kts
.github/workflows/: android.yml  gradle-wrapper-validation.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xray
app/src/main/cpp/: CMakeLists.txt  jni_bridge.c
app/src/main/java/com/example/: CrashLogger.kt  MainActivity.kt  V2RayDanApp.kt
app/src/main/java/com/example/data/: Daos.kt  Entities.kt  Result.kt  V2RayDatabase.kt  V2RayException.kt  V2RayRepository.kt
app/src/main/java/com/example/service/: AutoConnectService.kt  HevSocks5Tunnel.kt  V2RayVpnService.kt  VpnCoreManager.kt  XrayConfigGenerator.kt
app/src/main/java/com/example/ui/screens/: HomeScreen.kt  LogsScreen.kt  MainAppContainer.kt  MainViewModel.kt  ProfileManager.kt  ServersScreen.kt  SettingsScreen.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/jniLibs/arm64-v8a/: .gitkeep
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/: ExampleRobolectricTest.kt  GreetingScreenshotTest.kt
gradle/: libs.versions.toml
